--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# IDE files
+.idea/
+*.iml
+*.ipr
+*.iws
+/.gradle/
+/.mvn/
+.vscode/
+
+# Bytecode
+/target/
+
 # Compiled class file
 *.class
 
@@ -22,3 +34,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Dependency directories
+/lib/
+/bin/
