--- a/SpacecraftAPI/src/main/resources/application.yml
+++ b/SpacecraftAPI/src/main/resources/application.yml
@@ -1,3 +1,13 @@
+xavi:
+  tech:
+    spacecraft:
+      cfg:
+        fake-entries: 40
+
+logging:
+  level:
+    tech.xavi.spacecraft: DEBUG
+
 spring:
   datasource:
     url: jdbc:h2:mem:spacecraftdb
