--- a/SpacecraftAPI/src/main/resources/application.yml
+++ b/SpacecraftAPI/src/main/resources/application.yml
@@ -10,12 +10,16 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:spacecraftdb
-    driver-class-name: org.h2.Driver
-    username: sc
-    password: pwd
+#    url: jdbc:h2:mem:spacecraftdb
+#    driver-class-name: org.h2.Driver
+    url: ${SC_DATASOURCE_URL:jdbc:postgresql://localhost:5432/spacecraftapi?currentSchema=public&ssl=false}
+    username: ${SC_DATASOURCE_USER:sc}
+    password: ${SC_DATASOURCE_PASS:pwd}
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create-drop
   h2:
     console:
       enabled: true
