--- a/SpacecraftAPI/src/main/resources/application.yml
+++ b/SpacecraftAPI/src/main/resources/application.yml
@@ -2,7 +2,16 @@ xavi:
   tech:
     spacecraft:
       cfg:
-        fake-entries: 40
+        test:
+          fake-spacecraft-entries: 40
+          credentials:
+            create-fake-accounts: true
+            admin: admin,admin
+            user: user,user
+        jwt:
+          issuer: spacecraft-api
+          access-tkn-exp-sec: 120
+          refresh-tkn-exp-sec: 320
 
 logging:
   level:
@@ -10,14 +19,14 @@ logging:
 
 spring:
   datasource:
-#    url: jdbc:h2:mem:spacecraftdb
-#    driver-class-name: org.h2.Driver
-    url: ${SC_DATASOURCE_URL:jdbc:postgresql://localhost:5432/spacecraftapi?currentSchema=public&ssl=false}
+    url: jdbc:h2:mem:spacecraftdb
+    driver-class-name: org.h2.Driver
+#    url: ${SC_DATASOURCE_URL:jdbc:postgresql://localhost:5432/spacecraftapi?currentSchema=public&ssl=false}
     username: ${SC_DATASOURCE_USER:sc}
     password: ${SC_DATASOURCE_PASS:pwd}
   jpa:
-#    database-platform: org.hibernate.dialect.H2Dialect
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
+#    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create-drop
   h2:
